Snake Hook + Ctrl does not set the brush stroke in its normal direction #70554

Closed
opened 2019-10-05 12:27:16 +02:00 by Albert · 4 comments

System Information
Operating system: Windows-10-10.0.18362 64 Bits
Graphics card: GeForce GTX 1060 3GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 388.13

Blender Version
Broken: version: 2.81 (sub 13), branch: master, commit date: 2019-10-04 22:33, hash: ab519b91b2
Worked: (optional)

Short description of error
In previous versions Snake Hook set direction with + Ctrl at the beginning of the stroke, just as the Grab brush does. In version 2.81 it is not like that, the brushstroke is produced without any restrictions.

By coherence I think Elastic Deform should act in the same way.

I don't see the Original Normal property affecting these three brushes. Alt key could activate it temporarily, and this could be applied to the rest of the brushes.

Exact steps for others to reproduce the error
Create a cube and subdivide it.
Apply subdivisions.
Enter sculpture mode and select the Snake Hook brush.
Press Ctrl and draw with the tip of the pencil.

**System Information** Operating system: Windows-10-10.0.18362 64 Bits Graphics card: GeForce GTX 1060 3GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 388.13 **Blender Version** Broken: version: 2.81 (sub 13), branch: master, commit date: 2019-10-04 22:33, hash: `ab519b91b2` Worked: (optional) **Short description of error** In previous versions Snake Hook set direction with + Ctrl at the beginning of the stroke, just as the Grab brush does. In version 2.81 it is not like that, the brushstroke is produced without any restrictions. By coherence I think Elastic Deform should act in the same way. I don't see the Original Normal property affecting these three brushes. Alt key could activate it temporarily, and this could be applied to the rest of the brushes. **Exact steps for others to reproduce the error** Create a cube and subdivide it. Apply subdivisions. Enter sculpture mode and select the Snake Hook brush. Press Ctrl and draw with the tip of the pencil.
Author

Added subscriber: @wevon-2

Added subscriber: @wevon-2
Author

I have noticed that Snake Hook correctly fixes the direction when Original Normal is activated, and also press the control key. Together it works, but not separately.

I have noticed that Snake Hook correctly fixes the direction when Original Normal is activated, and also press the control key. Together it works, but not separately.

This issue was referenced by 06c5520bda

This issue was referenced by 06c5520bda40c9b5b8240eaf4c8d0a1de7d2ffec
Pablo Dobarro was assigned by Germano Cavalcante 2019-10-08 15:00:26 +02:00
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#70554
No description provided.