Fix T70554: Snake Hook + Ctrl does not set the brush stroke in its normal direction

This commit also fixes the same issue in elastic deform

Reviewed By: jbakker

Maniphest Tasks: T70554

Differential Revision: https://developer.blender.org/D6014